--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "author": "Dan Bennett",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "chart.js": "^3.7.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-mysql-session": "^2.1.7",
+    "express-session": "^1.17.2",
+    "mdb-ui-kit": "^3.10.2",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
